kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-html
  namespace: devops-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: sample-html

  strategy:
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: sample-html

    spec:
      containers:
      - name: sample-html
        image: laahaasil/devops-sample-app:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
