kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-html-service
  namespace: devops-app

spec:
  type: NodePort

  selector:
    app: sample-html

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
